--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "husky": {
     "hooks": {
-     "pre-commit": "npm lint && npm format && git add ."
+      "pre-commit": "npm run lint && npm run format && git add ."
     }
- }
+  }
 }
